k8s/prod/ingress-host-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spring-ingress
spec:
  rules:
    - host: prod.demo.com
